small modification to our page

--- a/site/index.html
+++ b/site/index.html
@@ -4,6 +4,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>hello This is My First Page Of Html </p>
+    <h1>hello This is My First Page Of Html </h1>
 </body>
 </html>
