--- a/site/index.html
+++ b/site/index.html
@@ -1,9 +1,11 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<head>
-    <title>Document</title>
-</head>
-<body>
-    <h1>hello This is My First Page Of Html </h1>
-</body>
+    <head>
+        <!--page description-->
+        <meta charset="utf-8">
+        <title>HTML</title>
+    </head>
+    <body>
+        <p>Cooll Somwthing</p>
+    </body>
 </html>
